--- a/DotNetprojet2-main/P2FixAnAppDotNetCode/Resources/Controllers/OrderController.fr.resx
+++ b/DotNetprojet2-main/P2FixAnAppDotNetCode/Resources/Controllers/OrderController.fr.resx
@@ -120,4 +120,16 @@
   <data name="CartEmpty" xml:space="preserve">
     <value>Désolé votre panier est vide !</value>
   </data>
+  <data name="ErrorMissingAddress" xml:space="preserve">
+    <value>Le champ Adresse est obligatoire.</value>
+  </data>
+  <data name="ErrorMissingCity" xml:space="preserve">
+    <value>Le champ Ville est obligatoire.</value>
+  </data>
+  <data name="ErrorMissingCountry " xml:space="preserve">
+    <value>Le champ Pays est obligatoire.</value>
+  </data>
+  <data name="ErrorMissingName " xml:space="preserve">
+    <value> Le champ Nom est obligatoire.</value>
+  </data>
 </root>
